--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -10,17 +10,17 @@
 </head>
 <body class="bg-[#050505] text-gray-400 font-sans selection:bg-[#40B5AD]/30">
 
-<div id="wiki-app">
+<div id="wiki-app" v-cloak>
     <nav class="fixed top-0 w-full h-14 bg-[#050505]/80 backdrop-blur-xl border-b border-white/5 z-[1000] flex items-center justify-between px-6">
-        <div class="flex items-center gap-3 cursor-pointer" onclick="location.hash='#/'">
+        <div class="flex items-center gap-3 cursor-pointer" @click="navigateTo('/')">
             <div class="w-3 h-3 bg-[#40B5AD] shadow-[0_0_10px_#40B5AD]"></div>
             <span class="font-black text-white tracking-widest text-sm uppercase">OpenST <span class="text-gray-600 font-light">Wiki</span></span>
         </div>
 
         <div class="flex items-center gap-4">
-            <div v-if="userToken" class="flex items-center gap-3 bg-white/5 pl-3 pr-1 py-1 rounded-full border border-white/5 group relative cursor-pointer">
-                <span class="text-xs text-white font-bold">已授权</span>
-                <div class="w-6 h-6 bg-[#40B5AD] rounded-full flex items-center justify-center text-[10px] text-black font-bold">ST</div>
+            <div v-if="userToken" class="group relative flex items-center gap-3 bg-white/5 pl-3 pr-1 py-1 rounded-full border border-white/5 cursor-pointer">
+                <span class="text-[10px] text-white font-bold tracking-tighter uppercase">Authorized</span>
+                <div class="w-6 h-6 bg-[#40B5AD] rounded-full flex items-center justify-center text-[10px] text-black font-black">ST</div>
                 <div @click="logout" class="absolute inset-0 bg-red-500 rounded-full opacity-0 hover:opacity-100 flex items-center justify-center transition-opacity">
                     <span class="text-[10px] text-white font-black">LOGOUT</span>
                 </div>
@@ -31,35 +31,27 @@
         </div>
     </nav>
 
-    <aside id="custom-sidebar" class="fixed left-0 top-14 bottom-0 w-64 bg-[#080808] border-r border-white/5 overflow-y-auto z-[900] py-6 px-4 hidden md:block">
+    <aside class="fixed left-0 top-14 bottom-0 w-64 bg-[#080808] border-r border-white/5 overflow-y-auto z-[900] py-6 px-4 hidden md:block">
         <div class="mb-8 px-4 text-[10px] text-gray-600 font-mono tracking-[0.3em] uppercase">Archive_Files</div>
-        <nav id="nav-tree" class="space-y-1">
+        <nav class="space-y-1">
+            <div v-for="item in sidebar" :key="item.path"
+                 @click="navigateTo(item.path)"
+                 :class="['block px-4 py-2 text-sm rounded-xl cursor-pointer transition-all',
+                          currentPath === item.path ? 'bg-[#40B5AD]/10 text-[#40B5AD] font-bold' : 'text-gray-500 hover:bg-white/5 hover:text-white']">
+                {{ item.title }}
+            </div>
         </nav>
     </aside>
 
-    <main id="app" class="pt-14 md:ml-64 min-h-screen"></main>
+    <main id="app" class="pt-14 md:ml-64 min-h-screen">
+        <section class="markdown-section animate-in fade-in duration-500" v-html="renderedHTML"></section>
+    </main>
 
     <div v-if="isEditing" class="fixed inset-0 z-[2000] flex items-center justify-center p-4">
-        <div class="absolute inset-0 bg-black/90 backdrop-blur-md"></div>
-        <div class="relative w-full max-w-5xl h-[90vh] bg-[#0c0c0c] border border-white/10 rounded-[2rem] flex flex-col shadow-2xl overflow-hidden animate-in fade-in zoom-in-95 duration-300">
-            <div class="p-6 border-b border-white/5 flex justify-between items-center bg-white/[0.02]">
-                <div>
-                    <h2 class="text-white font-bold tracking-tight">条目协作修改</h2>
-                    <p class="text-[10px] font-mono text-[#40B5AD] mt-0.5 uppercase tracking-widest">{{ editForm.path }}</p>
-                </div>
-                <div class="flex gap-3">
-                    <button @click="isEditing = false" class="px-5 py-2 text-xs text-gray-500 hover:text-white uppercase">取消</button>
-                    <button @click="handleWikiSubmit" :disabled="step === 2" class="px-6 py-2 text-xs bg-[#40B5AD] text-black font-black rounded-full shadow-lg shadow-[#40B5AD]/20 hover:scale-105 transition disabled:opacity-50">
-                        {{ step === 2 ? 'SUBMITTING...' : '提交修改 ISSUE' }}
-                    </button>
-                </div>
-            </div>
-            <textarea v-model="editForm.content" class="flex-1 bg-transparent p-10 text-gray-300 font-mono text-base focus:outline-none resize-none leading-relaxed"></textarea>
-        </div>
     </div>
 
-    <button v-if="userToken && showEditBtn" @click="openWikiEditor" class="fixed bottom-8 right-8 w-14 h-14 bg-[#40B5AD] text-black rounded-2xl flex items-center justify-center shadow-xl hover:rotate-12 transition-all z-[999]">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg>
+    <button v-if="userToken && showEditBtn" @click="openWikiEditor" class="fixed bottom-8 right-8 w-14 h-14 bg-[#40B5AD] text-black rounded-2xl flex items-center justify-center shadow-xl hover:rotate-12 transition-all">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg>
     </button>
 </div>
 
