--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -1,62 +1,34 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class="dark">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>OpenST Wiki</title>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
     <link rel="stylesheet" href="wiki-style.css">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 </head>
-<body class="bg-[#050505] text-gray-400 font-sans selection:bg-[#40B5AD]/30">
+<body>
+<div class="soft-bg"></div>
 
-<div id="wiki-app" v-cloak>
-    <nav class="fixed top-0 w-full h-14 bg-[#050505]/80 backdrop-blur-xl border-b border-white/5 z-[1000] flex items-center justify-between px-6">
-        <div class="flex items-center gap-3 cursor-pointer" @click="navigateTo('/')">
-            <div class="w-3 h-3 bg-[#40B5AD] shadow-[0_0_10px_#40B5AD]"></div>
-            <span class="font-black text-white tracking-widest text-sm uppercase">OpenST <span class="text-gray-600 font-light">Wiki</span></span>
-        </div>
+<div id="app">Loading Wiki...</div>
 
-        <div class="flex items-center gap-4">
-            <div v-if="userToken" class="group relative flex items-center gap-3 bg-white/5 pl-3 pr-1 py-1 rounded-full border border-white/5 cursor-pointer">
-                <span class="text-[10px] text-white font-bold tracking-tighter uppercase">Authorized</span>
-                <div class="w-6 h-6 bg-[#40B5AD] rounded-full flex items-center justify-center text-[10px] text-black font-black">ST</div>
-                <div @click="logout" class="absolute inset-0 bg-red-500 rounded-full opacity-0 hover:opacity-100 flex items-center justify-center transition-opacity">
-                    <span class="text-[10px] text-white font-black">LOGOUT</span>
-                </div>
-            </div>
-            <button v-else @click="loginWithGitHub" class="text-xs font-bold text-[#40B5AD] border border-[#40B5AD]/20 px-4 py-1.5 rounded-full hover:bg-[#40B5AD] hover:text-black transition">
-                LOGIN_TO_EDIT
-            </button>
-        </div>
-    </nav>
+<div id="wiki-collab"></div>
 
-    <aside class="fixed left-0 top-14 bottom-0 w-64 bg-[#080808] border-r border-white/5 overflow-y-auto z-[900] py-6 px-4 hidden md:block">
-        <div class="mb-8 px-4 text-[10px] text-gray-600 font-mono tracking-[0.3em] uppercase">Archive_Files</div>
-        <nav class="space-y-1">
-            <div v-for="item in sidebar" :key="item.path"
-                 @click="navigateTo(item.path)"
-                 :class="['block px-4 py-2 text-sm rounded-xl cursor-pointer transition-all',
-                          currentPath === item.path ? 'bg-[#40B5AD]/10 text-[#40B5AD] font-bold' : 'text-gray-500 hover:bg-white/5 hover:text-white']">
-                {{ item.title }}
-            </div>
-        </nav>
-    </aside>
-
-    <main id="app" class="pt-14 md:ml-64 min-h-screen">
-        <section class="markdown-section animate-in fade-in duration-500" v-html="renderedHTML"></section>
-    </main>
-
-    <div v-if="isEditing" class="fixed inset-0 z-[2000] flex items-center justify-center p-4">
-    </div>
-
-    <button v-if="userToken && showEditBtn" @click="openWikiEditor" class="fixed bottom-8 right-8 w-14 h-14 bg-[#40B5AD] text-black rounded-2xl flex items-center justify-center shadow-xl hover:rotate-12 transition-all">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg>
-    </button>
-</div>
-
-<script src="https://unpkg.com/docsify@4/lib/docsify.min.js"></script>
-<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<script>
+    window.$docsify = {
+        name: 'OpenST Wiki',
+        basePath: 'content/',
+        loadSidebar: true,
+        auto2top: true,
+        themeable: {
+            readyTransition: true,
+            responsiveTables: true
+        }
+    };
+</script>
+<script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
+<script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
 <script src="wiki-core.js"></script>
 </body>
 </html>
