--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -18,7 +18,7 @@
 <script>
     window.$docsify = {
         name: 'OpenST Wiki',
-        basePath: 'content/',
+        basePath: './content/',
         loadSidebar: true,
         auto2top: true,
         themeable: {
