--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -53,7 +53,7 @@
         // 这样侧边栏顶部就不会多出一个多余的、样式不对的文本
         name: '',
 
-        basePath: 'wiki/content/',
+        basePath: '/content/',
         relativePath: true,
         loadSidebar: true,
         auto2top: true,
