--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -51,7 +51,7 @@
     window.$docsify = {
         // 将 name 设为空，或者设为你的 Vue 模板中 Logo 对应的 HTML
         // 这样侧边栏顶部就不会多出一个多余的、样式不对的文本
-        name: '',
+        name: 'OpenST Wiki',
 
         basePath: '/wiki/content/',
         relativePath: true,
