--- a/auth-callback.html
+++ b/auth-callback.html
@@ -1,3 +1,4 @@
+<!-- auth-callback.html-->
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const code = urlParams.get('code');
