--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -69,7 +69,7 @@
 <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
 
-<script src="wiki-core.js"></script>
+<script src="wiki-core.js" type="module"></script>
 
 <script>
     window.onerror = function(msg, url, line) {
