--- a/wiki/wiki_edit.html
+++ b/wiki/wiki_edit.html
@@ -115,7 +115,7 @@
     const { createApp } = Vue;
     const WORKER_URL = "https://openstsubmission.linvin.net";
     // 定义 Wiki 内容的物理根目录，方便统一维护
-    const WIKI_BASE = "/wiki/contents";
+    const WIKI_BASE = "/contents";
 
     createApp({
         data() {
