--- a/wiki/wiki_edit.html
+++ b/wiki/wiki_edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Wiki - OpenST</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -13,7 +13,7 @@
 
     <style>
         :root { --brand-color: #40B5AD; --bg-deep: #0c0c0c; }
-        body { background-color: var(--bg-deep); color: #e0e0e0; font-family: 'Inter', system-ui, sans-serif; overflow: hidden; }
+        body { background-color: var(--bg-deep); color: #e0e0e0; font-family: 'Inter', system-ui, sans-serif; overflow: hidden; height: 100dvh; }
 
         .glass-panel { background: rgba(255, 255, 255, 0.01); backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.05); border-radius: 24px; }
         .cyber-btn { background: var(--brand-color); color: #000; font-weight: 800; transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1); }
@@ -21,92 +21,104 @@
         .cyber-btn:disabled { opacity: 0.3; cursor: not-allowed; }
 
         .markdown-body { background: transparent !important; font-size: 14px; line-height: 1.8; color: rgba(255,255,255,0.8); }
-        .markdown-body h1, .markdown-body h2 { border-bottom-color: rgba(255,255,255,0.1); }
-        .markdown-body img { border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); }
+        .markdown-body img { border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); max-width: 100%; }
 
-        .no-scrollbar::-webkit-scrollbar { width: 4px; }
+        .no-scrollbar::-webkit-scrollbar { width: 4px; height: 4px; }
         .no-scrollbar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
-        .resizer { width: 1px; background: rgba(255,255,255,0.05); margin: 0 4px; }
 
+        /* 响应式核心：移动端上下排列 */
+        @media (max-width: 1024px) {
+            main { flex-direction: column !important; }
+            .resizer { display: none !important; }
+            section { width: 100% !important; flex: 1 1 50% !important; }
+            .glass-panel { border-radius: 12px; }
+            header { padding: 0.5rem !important; }
+        }
+
+        .resizer { width: 1px; background: rgba(255,255,255,0.05); margin: 0 4px; }
         input::placeholder { color: rgba(255,255,255,0.2); }
     </style>
 </head>
 <body>
 
-<div id="editor-app" class="h-screen w-full flex flex-col p-4 lg:p-6">
+<div id="editor-app" class="h-full w-full flex flex-col p-3 lg:p-6">
 
-    <header class="flex justify-between items-center mb-4 px-4">
-        <div class="flex items-center gap-4 flex-1">
+    <header class="flex justify-between items-center mb-4 px-2">
+        <div class="flex items-center gap-3 flex-1 min-w-0">
             <a href="wiki.html" class="text-[10px] font-black tracking-[0.3em] text-white/20 hover:text-[#40B5AD] transition-all uppercase">Exit</a>
             <div class="h-4 w-px bg-white/10"></div>
 
-            <div v-if="isNewFile" class="flex items-center gap-2">
-                <span class="text-[10px] font-mono text-white/20 uppercase">New Document:</span>
-                <input v-model="newFileName" placeholder="filename-in-kebab-case"
-                       class="bg-transparent border-b border-[#40B5AD]/30 outline-none font-mono text-sm text-[#40B5AD] w-64 focus:border-[#40B5AD] transition-all">
-                <span class="text-sm font-mono text-white/40">.md</span>
+            <div class="flex items-center gap-1 min-w-0 overflow-hidden">
+                <span class="text-[10px] font-mono text-white/20 uppercase hidden sm:inline">Editing:</span>
+                <template v-if="isNewFile">
+                    <input v-model="newFileName" placeholder="file-name"
+                           class="bg-transparent border-b border-[#40B5AD]/30 outline-none font-mono text-sm text-[#40B5AD] w-32 sm:w-48 focus:border-[#40B5AD]">
+                </template>
+                <span v-else class="text-[#40B5AD] text-sm font-mono truncate">{{ filePath }}</span>
+                <span class="text-white/20 text-xs">.md</span>
             </div>
-            <h1 v-else class="text-sm font-mono tracking-tighter text-white/60">
-                editing: <span class="text-[#40B5AD]">{{ filePath }}</span>
-            </h1>
         </div>
 
-        <div class="flex items-center gap-4">
-            <span v-if="loading" class="text-[10px] text-white/20 animate-pulse tracking-widest uppercase">Processing...</span>
-            <button @click="submitEdit" :disabled="loading || !content.trim() || (isNewFile && !newFileName.trim())" class="cyber-btn px-6 py-2 rounded-lg text-[11px]">
-                {{ loading ? 'WAIT' : 'COMMIT' }}
-            </button>
-        </div>
+        <button @click="submitEdit" :disabled="loading || !content.trim() || (isNewFile && !newFileName.trim())"
+                class="cyber-btn px-5 py-2 rounded-lg text-[10px] ml-2">
+            {{ loading ? 'WAIT' : 'COMMIT' }}
+        </button>
     </header>
 
     <main class="flex-1 flex glass-panel overflow-hidden">
-        <section class="flex-1 flex flex-col min-w-0">
-            <div class="px-6 py-2 border-b border-white/5 text-[9px] text-white/20 font-mono tracking-widest uppercase flex justify-between">
-                <span>Editor / Markdown</span>
-                <span>{{ content.length }} chars</span>
+        <section class="flex-1 flex flex-col min-w-0 border-r border-white/5">
+            <div class="px-4 py-2 border-b border-white/5 text-[9px] text-white/20 font-mono tracking-widest uppercase flex justify-between items-center bg-white/[0.01]">
+                <span>Markdown Source</span>
+                <span class="hidden sm:inline">{{ content.length }} chars</span>
             </div>
             <textarea
+                    ref="editorTextarea"
                     v-model="content"
+                    @scroll="handleScroll"
                     spellcheck="false"
-                    placeholder="Write your story here..."
-                    class="flex-1 w-full p-8 lg:p-10 bg-transparent outline-none font-mono text-sm leading-relaxed text-white/70 resize-none no-scrollbar">
+                    placeholder="Start writing..."
+                    class="flex-1 w-full p-5 lg:p-8 bg-transparent outline-none font-mono text-sm leading-relaxed text-white/70 resize-none no-scrollbar">
             </textarea>
         </section>
 
         <div class="resizer"></div>
 
         <section class="flex-1 flex flex-col min-w-0 bg-white/[0.005]">
-            <div class="px-6 py-2 border-b border-white/5 text-[9px] text-[#40B5AD] font-mono tracking-widest uppercase">
-                Live Preview (Local Assets Integrated)
+            <div class="px-4 py-2 border-b border-white/5 text-[9px] text-[#40B5AD] font-mono tracking-widest uppercase bg-white/[0.01]">
+                Live Preview
             </div>
             <div
+                    ref="previewArea"
                     v-html="previewHtml"
-                    class="markdown-body flex-1 w-full p-8 lg:p-10 overflow-y-auto no-scrollbar">
+                    class="markdown-body flex-1 w-full p-5 lg:p-8 overflow-y-auto no-scrollbar">
             </div>
         </section>
     </main>
 
-    <footer class="mt-4 flex items-center justify-between px-4">
-        <div class="flex items-center gap-4">
-            <label class="group cursor-pointer">
+    <footer class="mt-3 flex flex-col sm:flex-row items-center justify-between gap-3 px-2">
+        <div class="flex items-center gap-3 w-full sm:w-auto">
+            <label class="shrink-0 cursor-pointer">
                 <input type="file" multiple accept="image/*" @change="handleImageSelect" class="hidden">
-                <div class="flex items-center gap-2 px-4 py-2 bg-white/5 hover:bg-[#40B5AD]/20 border border-white/10 rounded-xl transition-all">
-                    <span class="text-[10px] font-black text-white/40 group-hover:text-[#40B5AD] uppercase tracking-widest">Attach Images</span>
+                <div class="px-3 py-2 bg-white/5 hover:bg-[#40B5AD]/20 border border-white/10 rounded-lg transition-all text-[9px] font-black text-white/40 uppercase tracking-widest">
+                    Add Images
                 </div>
             </label>
 
-            <div class="flex gap-2">
-                <div v-for="file in imageFiles" :key="file.name"
-                     @click="insertImageLink(file.name)"
-                     class="group relative w-10 h-10 rounded-lg overflow-hidden border border-white/10 cursor-copy hover:border-[#40B5AD] transition-all"
-                     :title="'Click to insert: ' + file.name">
-                    <img :src="imageMap[file.name]" class="w-full h-full object-cover opacity-60 group-hover:opacity-100">
+            <div class="flex gap-2 overflow-x-auto no-scrollbar py-1">
+                <div v-for="(file, index) in imageFiles" :key="file.name"
+                     class="group relative w-10 h-10 shrink-0">
+                    <img :src="imageMap[file.name]" @click="insertImageLink(file.name)"
+                         class="w-full h-full object-cover rounded border border-white/10 cursor-pointer hover:border-[#40B5AD] opacity-60 hover:opacity-100">
+                    <div @click.stop="removeImage(index)"
+                         class="absolute -top-1 -right-1 w-3 h-3 bg-red-500/80 text-white text-[8px] flex items-center justify-center rounded-full cursor-pointer">
+                        ×
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div v-if="user" class="text-[9px] font-mono text-white/10 tracking-[0.2em]">
-            IDENTIFIED AS: <span class="text-white/40">{{ user.login.toUpperCase() }}</span>
+        <div v-if="user" class="text-[8px] font-mono text-white/10 tracking-widest">
+            ID: <span class="text-white/30">{{ user.login.toUpperCase() }}</span>
         </div>
     </footer>
 </div>
@@ -114,18 +126,15 @@
 <script>
     const { createApp } = Vue;
     const WORKER_URL = "https://openstsubmission.linvin.net";
-    // 定义 Wiki 内容的物理根目录，方便统一维护
     const WIKI_BASE = "/content";
 
     createApp({
         data() {
-            // 获取路径参数，默认为 /README
             let pathParam = new URLSearchParams(window.location.search).get('path') || '/README';
-            // 如果只有斜杠，自动补全为 /README
             if (pathParam === '/') pathParam = '/README';
 
             return {
-                filePath: pathParam, // 逻辑路径，如 "/README" 或 "/coding"
+                filePath: pathParam,
                 isNewFile: pathParam === '/NEW_DOCUMENT',
                 newFileName: '',
                 content: '',
@@ -138,8 +147,7 @@
         },
         computed: {
             previewHtml() {
-                let raw = this.content || '*Waiting for input...*';
-                // 实时预览：将本地引用的图片名替换为 Blob URL
+                let raw = this.content || '*No content to preview*';
                 const processed = raw.replace(/!\[(.*?)\]\((?!http)(.*?)\)/g, (match, alt, filename) => {
                     const localBlob = this.imageMap[filename];
                     return localBlob ? `![${alt}](${localBlob})` : match;
@@ -151,19 +159,14 @@
             this.checkAuth();
             if (!this.isNewFile) {
                 this.loading = true;
-                // 修正获取路径：逻辑路径 -> 物理路径
-                // 例如：/README -> ./wiki/contents/README.md
                 const normalizedPath = this.filePath.startsWith('/') ? this.filePath : '/' + this.filePath;
-                const targetUrl = `.${WIKI_BASE}${normalizedPath}.md`;
-
+                // 解决 404：拼接绝对路径
+                const targetUrl = `${window.location.origin}/wiki${WIKI_BASE}${normalizedPath}.md`;
                 try {
                     const res = await fetch(targetUrl);
-                    this.content = res.ok ? await res.text() : "# File Not Found\nStarting a new document...";
-                } catch (e) {
-                    this.content = "# Error\nCould not fetch remote content from " + targetUrl;
-                } finally {
-                    this.loading = false;
-                }
+                    this.content = res.ok ? await res.text() : "# Not Found\nCreating new content...";
+                } catch (e) { this.content = "# Load Error"; }
+                finally { this.loading = false; }
             }
         },
         methods: {
@@ -174,9 +177,11 @@
                 this.user = authData.user;
                 this.token = authData.access_token;
             },
-
             handleImageSelect(e) {
                 const files = Array.from(e.target.files);
+                const totalSize = files.reduce((acc, f) => acc + f.size, 0);
+                if (totalSize > 50 * 1024 * 1024) return alert("Total size exceeds 50MB limit!");
+
                 this.imageFiles = files;
                 Object.values(this.imageMap).forEach(URL.revokeObjectURL);
                 this.imageMap = {};
@@ -184,43 +189,50 @@
                     this.imageMap[file.name] = URL.createObjectURL(file);
                 });
             },
-
-            insertImageLink(name) {
-                this.content += `\n![Image Description](${name})`;
+            removeImage(index) {
+                const name = this.imageFiles[index].name;
+                URL.revokeObjectURL(this.imageMap[name]);
+                delete this.imageMap[name];
+                this.imageFiles.splice(index, 1);
             },
-
+            insertImageLink(name) {
+                const el = this.$refs.editorTextarea;
+                const start = el.selectionStart;
+                const end = el.selectionEnd;
+                const tag = `![Description](${name})`;
+                this.content = this.content.substring(0, start) + tag + this.content.substring(end);
+                this.$nextTick(() => {
+                    el.focus();
+                    el.setSelectionRange(start + 2, start + 13);
+                });
+            },
+            handleScroll(e) {
+                const previewEl = this.$refs.previewArea;
+                const ratio = e.target.scrollTop / (e.target.scrollHeight - e.target.clientHeight);
+                previewEl.scrollTop = ratio * (previewEl.scrollHeight - previewEl.clientHeight);
+            },
             async submitEdit() {
-                // 1. 确定最终的文章名称 (baseName)
                 let baseName = this.isNewFile
                     ? this.newFileName.trim().replace(/[^a-zA-Z0-9-_\u4e00-\u9fa5]/g, '-')
                     : this.filePath.replace(/^\//, '').replace('.md', '');
 
-                if (!baseName) return alert("Please specify a valid filename.");
-
+                if (!baseName) return alert("Invalid filename");
                 this.loading = true;
 
                 try {
-                    // 2. JSZip 打包：按照“文稿文件夹 = 图片文件夹”的标准化结构
                     const zip = new JSZip();
-                    // 创建同名文件夹，例如：coding/
                     const folder = zip.folder(baseName);
-
-                    // 放入文稿：coding/coding.md
                     folder.file(`${baseName}.md`, this.content);
-                    // 放入所有关联图片：coding/pic1.png
                     this.imageFiles.forEach(f => folder.file(f.name, f));
 
                     const zipBlob = await zip.generateAsync({ type: "blob" });
                     const zipFileName = `${this.isNewFile ? 'wiki-submission' : 'wiki-modify'}-${baseName}.zip`;
 
-                    // 3. 构建 FormData 并告知 Worker 物理路径
                     const fd = new FormData();
                     fd.append('file', zipBlob, zipFileName);
                     fd.append('user', this.user.login);
-                    // 核心修改：明确告知管理员应该把这个文件夹解压到哪里
-                    const targetDir = `${WIKI_BASE}/${baseName}`;
-                    fd.append('path', targetDir);
-                    fd.append('title', `[Wiki ${this.isNewFile ? '新建' : '修订'}] ${baseName}`);
+                    fd.append('path', `wiki/contents/${baseName}`); // 提交物理路径
+                    fd.append('title', `[Wiki ${this.isNewFile ? 'New' : 'Edit'}] ${baseName}`);
 
                     const res = await fetch(`${WORKER_URL}/api/wiki/submit-archive`, {
                         method: 'POST',
@@ -231,19 +243,13 @@
                     if (res.ok) {
                         const data = await res.json();
                         alert(`🎉 Success! Issue #${data.issueNumber} created.`);
-                        window.location.href = data.issueUrl || `https://github.com/MC-OpenST/website/issues/${data.issueNumber}`;
-                    } else {
-                        throw new Error(await res.text());
-                    }
-                } catch (e) {
-                    alert('Submission failed: ' + e.message);
-                } finally {
-                    this.loading = false;
-                }
+                        window.location.href = data.issueUrl;
+                    } else { throw new Error(await res.text()); }
+                } catch (e) { alert('Failed: ' + e.message); }
+                finally { this.loading = false; }
             }
         }
     }).mount('#editor-app');
 </script>
-
 </body>
 </html>
